--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -414,7 +414,7 @@
         </li>
 
         <!-- ---------------------------------------vc----------------- -->
-        <li *ngIf="isOperator">
+        <li *ngIf="isUser">
             <a> <mat-icon class="icon">control_camera</mat-icon>VC/STB Master <i
                     class='bx bx-chevron-right icon-right'></i></a>
             <ul class="side-dropdown">
