--- a/src/app/admin/features/special_role/Dialogue/sublcooperator/sublcooperator.component.html
+++ b/src/app/admin/features/special_role/Dialogue/sublcooperator/sublcooperator.component.html
@@ -23,79 +23,123 @@
 
     <div class="grid-container">
         <div *ngFor="let operator of pagedOperators">
-            <!-- <div *ngFor="let operator of filteredOperators"> -->
             <mat-card class="card">
                 <mat-card-header>
-                    <div class="d-block justify-content-start align-item-center">
-                        <div class="sub-tittle mb-3 col-md-10" style="text-align: left;font-weight: bold;">
-                            {{operator?.operatorname || 'empty'}} <span
-                                style="color: rgb(1, 1, 14);font-weight: bold;">[{{operator?.operatorid}}]</span> -
+                    <div class="d-flex justify-content-start align-item-center">
+                        <div class="sub-tittle mb-3 col-md-6" style="text-align: left;font-weight: bold;">
+                            {{operator?.retailerName || 'empty'}} <span
+                                style="color: rgb(1, 1, 14);font-weight: bold;">[{{operator?.retailerId}}]</span> -
                             <span style="color: var(--oper-grid-amount);">[{{operator?.balance}}]</span>
                         </div>
-                        <div class="sub-tittle mb-3 col-md-10" style="text-align: left;color: rgb(26, 23, 23);">
-                            Phone: <span style="color: rgb(19, 4, 104);">{{operator?.contactnumber1 ||
-                                operator?.contactnumber2}}</span>
-
+                        <div class="sub-tittle mb-3 col-md-6" style="text-align: right;color: rgb(26, 23, 23);">
+                            Phone: <span style="color: rgb(19, 4, 104);">{{operator?.contactNo ||
+                                operator?.contactNo2}}</span>
                         </div>
-
                     </div>
                 </mat-card-header>
 
                 <mat-card-content>
                     <div class="col-12 head " style="text-align: left;">
-                        <div class="col-6 col-md-6">
-
-                            <p class="text" [ngClass]="operator?.isactive === 'true' ? 'active-text' : 'deactive-text'">
-                                <span class="label">Status</span>
-                                <span class="separator1">:</span>
-                                <span class="last1">{{ operator?.isactive === 'true' ? 'Active' : 'Deactive' }}</span>
-                            </p>
-                            <p class="text">
-                                <span class="label label1">user id</span>
-                                <span class="separator">:</span>
-                                <span class="last">{{operator?.userid}}</span>
-                            </p>
-
-                            <p class="text">
-                                <span class="label label2">password</span>
-                                <span class="separator">:</span>
-                                <span class="last">{{operator?.password}}</span>
-                            </p>
-                           <p class="text" [ngClass]="operator?.isonlinepayment ? 'active-text' : 'deactive-text'">
-                                <span class="label">online payment</span>
-                                <span class="separator1">:</span>
-                                <span class="last1">{{ operator?.isonlinepayment ? 'Active' : 'Deactive' }}</span>
-                            </p>
-                        </div>
-                        <div class="col-6 col-md-6">
-                            <mat-card class="inventory">
-                                <p>Box Inventory </p>
-                                <div class="row" style="display: flex;">
-                                    <div class="col-6 tooltip-container" style="cursor: pointer;">
-                                        <span style="font-size: 13px;"> In hand</span>
-                                        <mat-card class="card-inside"
-                                            (click)="openDialog('box_in_hand',operator.operatorid)">
-                                            <span
-                                                style="color: var(--active-edit-icon);font-weight: bold;">{{operator?.boxinhand}}</span>
-                                        </mat-card>
-                                        <span class="tooltip">Box In Hand</span>
-                                    </div>
-                                    <div class="col-6 tooltip-container" style="cursor: pointer;">
-                                        <span style="font-size: 13px;">Total</span>
-                                        <mat-card class="card-inside"
-                                            (click)="openDialog('total_smartcard',operator.operatorid)">
-                                            <span
-                                                style="color: var(--active-edit-icon);font-weight: bold">{{operator?.totalbox}}</span>
-                                        </mat-card>
-                                        <span class="tooltip">Total Box</span>
-                                    </div>
+                        <div class="col-12 col-md-12 d-flex justify-content-between">
+                            <div class="d-flex ">
+                                <div class="sub-tittle mb-3 col-md-12">
+                                    <p class="text">
+                                        <span class="label label1">user id</span>
+                                        <span class="separator">:</span>
+                                        <span class="last">{{operator?.username}}</span>
+                                    </p>
+                                    <p class="text">
+                                        <span class="label label2">password</span>
+                                        <span class="separator">:</span>
+                                        <span class="last">{{operator?.password}}</span>
+                                    </p>
                                 </div>
-                            </mat-card>
 
+                            </div>
+                            <div class="d-flex">
+                                <div class="sub-tittle mb-3 col-md-12">
+                                    <p class="text "
+                                        [ngClass]="operator?.isactive === 'true' ? 'active-text' : 'deactive-text'">
+                                        <span class="label">Status</span>
+                                        <span class="separator1">:</span>
+                                        <span class="last1">{{ operator?.isactive === 'true' ? 'Active' :
+                                            'Deactive'}}</span>
+                                    </p>
+                                    <!-- <p class="text"
+                                        [ngClass]="operator?.isonlinepayment ? 'active-text' : 'deactive-text'">
+                                        <span class="label">online payment</span>
+                                        <span class="separator1">:</span>
+                                        <span class="last1">{{ operator?.isonlinepayment ? 'Active' : 'Deactive'
+                                            }}</span>
+                                    </p> -->
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class=" col-12 d-flex justify-content-center align-items-center">
+                        <div class="col-2 vertical tooltip-container">
+                            <div class="col-2 vertical tooltip-container">
+                                <i class="fas fa-edit" style="color: #01698c;"
+                                    (click)="this.openaddedlogue('updatesublco', operator.operatorid);"></i>
+                                <span class="tooltip">Edit SUBLCO</span>
+                            </div>
+                        </div>
+                        <div class="col-2 vertical tooltip-container">
+                            <div class="col-2 vertical tooltip-container">
+                                <i class="fa fa-map-marker" aria-hidden="true" style="color: #f701d5;"
+                                    (click)="this.openaddedlogue('areaupdation', operator.operatorid);"></i>
+                                <span class="tooltip">Area Updation</span>
+                            </div>
+                        </div>
+                        <div class="col-2 vertical tooltip-container"
+                            (click)="openDialog('active_smartcard_connection',operator.operatorid)">
+                            <div class="col-2 vertical tooltip-container">
+
+                                <i class="fas fa-file-alt" style="color: red;"></i>
+
+                                <span class="tooltip">Report</span>
+                            </div>
+                        </div>
+                        <div class="col-2 vertical tooltip-container"
+                            (click)="openDialog('active_smartcard_connection',operator.operatorid)">
+                            <div class="col-2 vertical tooltip-container">
+
+
+                                <i class="fa fa-lock" aria-hidden="true" style="color: #124101c9;"></i>
+
+                                <span class="tooltip">Permission</span>
+                            </div>
+                        </div>
+                        <div class="col-2 vertical tooltip-container"
+                            (click)="openDialog('active_smartcard_connection',operator.operatorid)">
+                            <div class="col-2 vertical tooltip-container">
+                                <i class="fa fa-cog" aria-hidden="true" style="color: brown;"></i>
+                                <span class="tooltip">SUBLCO Rating</span>
+                            </div>
+                        </div>
+                        <div class="col-2 vertical tooltip-container"
+                            (click)="openDialog('active_smartcard_connection',operator.operatorid)">
+                            <div class="col-2 vertical tooltip-container">
+                                <i class="fa fa-dollar" style="color: blue;"></i>
+                                <span class="tooltip">SUBLCO Discount</span>
+                            </div>
                         </div>
                     </div>
                     <br>
                     <div class="child-card col-12">
+                        <div class="col-2 vertical tooltip-container"
+                            (click)="openDialog('box_in_hand',operator.operatorid)">
+                            <div class="col-2 vertical tooltip-container">
+                                <p class="sub-text">Box In Hand</p>
+                                <span style="color: #0e610b;">
+                                    <div class="circle" style="background-color: rgb(1, 49, 49);"><span
+                                            class="circle-text">{{operator?.boxinhand}}</span></div>
+                                </span>
+                                <span class="tooltip">Box In Hand</span>
+                            </div>
+                        </div>
                         <div class="col-2 vertical tooltip-container"
                             (click)="openDialog('active_smartcard_connection',operator.operatorid)">
                             <div class="col-2 vertical tooltip-container">
@@ -134,8 +178,6 @@
 
             </mat-card>
         </div>
-
-
     </div>
     <div class="d-flex justify-content-center align-items-center" style="padding: 0.5rem;">
         <mat-paginator [length]="totalLength" [pageSize]="pageSize" [pageSizeOptions]="[10,50,100,500,1000,2500]"
