--- a/src/app/admin/features/vc/stc/chipid-model/chipid-model.component.html
+++ b/src/app/admin/features/vc/stc/chipid-model/chipid-model.component.html
@@ -163,7 +163,7 @@
                                                     <div *ngFor="let item of filteredAddedList" class="example-box"
                                                         (click)="toggleSelection(item)" cdkDrag [cdkDragData]="item"
                                                         [class.selected]="isSelected(item)">
-                                                        {{ item.model_no }}
+                                                        {{ item.modelno }}
                                                     </div>
                                                 </div>
                                             </div>
