--- a/src/app/admin/features/operator_Login/Dialog/lco-smartcard-dialog/lco-smartcard-dialog.component.html
+++ b/src/app/admin/features/operator_Login/Dialog/lco-smartcard-dialog/lco-smartcard-dialog.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="type == 'pay_option'">
     <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
         <h6>PAYMENT UPDATE</h6>
         <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
@@ -34,6 +34,148 @@
                     <div class="col-6">
                         <div class="gender-category">
                             {{lcoPaymentList?.new_balance}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="line">
+                <div class="col-12 d-flex justify-content-center align-items-center">
+                    <div class="col-6 d-flex justify-content-start align-items-center">
+                        <span>Collected Amount</span>
+                    </div>
+                    <div class="col-6">
+                        <input type="text" [(ngModel)]="pay" (keypress)="onKeydown($event)"  placeholder="Enter payment ₹">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center mx-1" style="padding: 10px;">
+            <button type="button" class="btn btn-success" (click)="submit()">Submit
+            </button>
+            &nbsp;
+            <button type="button" class="btn btn-danger" (click)="onNoClick()">No</button>
+        </div>
+    </div>
+</div>
+<div *ngIf="type == 'pay_edit'">
+    <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
+        <h6>PAYMENT EDIT</h6>
+        <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
+    </div>
+    <div class="container">
+        <div class="card d-block justify-content-center align-items-center"
+            style="border: 1px solid green;padding: 1rem;">
+            <div class="line">
+                <div class=" col-12 d-flex justify-content-center align-items-center">
+                    <div class="col-6 d-flex justify-content-start align-items-center">
+                        <span>Customer Name</span>
+                    </div>
+                    <div class="col-6">
+                        {{lcoPaymentList?.customer_name}}
+                    </div>
+                </div>
+            </div>
+            <div class="line">
+                <div class=" col-12 d-flex justify-content-center align-items-center">
+                    <div class="col-6 d-flex justify-content-start align-items-center">
+                        <span>Smartcard</span>
+                    </div>
+                    <div class="col-6">
+                        {{lcoPaymentList?.smartcard}}
+                    </div>
+                </div>
+            </div>
+            <div class="line">
+                <div class="col-12 d-flex justify-content-center align-items-center">
+                    <div class="col-6 d-flex justify-content-start align-items-center">
+                        <span>Balance Amount</span>
+                    </div>
+                    <div class="col-6">
+                        <div class="gender-category">
+                            {{lcoPaymentList?.new_balance}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="line">
+                <div class="col-12 d-flex justify-content-center align-items-center">
+                    <div class="col-6 d-flex justify-content-start align-items-center">
+                        <span>Paid Amount</span>
+                    </div>
+                    <div class="col-6">
+                        <div class="gender-category">
+                            {{lcoPaymentList?.paid_amount}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="line">
+                <div class="col-12 d-flex justify-content-center align-items-center">
+                    <div class="col-6 d-flex justify-content-start align-items-center">
+                        <span>Collected Amount</span>
+                    </div>
+                    <div class="col-6">
+                        <input type="text" [(ngModel)]="pay" (keypress)="onKeydown($event)"  placeholder="Enter payment ₹">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center mx-1" style="padding: 10px;">
+            <button type="button" class="btn btn-success" (click)="submit()">Submit
+            </button>
+            &nbsp;
+            <button type="button" class="btn btn-danger" (click)="onNoClick()">No</button>
+        </div>
+    </div>
+</div>
+<div *ngIf="type == 'smartcardDetails'">
+    <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
+        <h6>PAYMENT EDIT</h6>
+        <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
+    </div>
+    <div class="container">
+        <div class="card d-block justify-content-center align-items-center"
+            style="border: 1px solid green;padding: 1rem;">
+            <div class="line">
+                <div class=" col-12 d-flex justify-content-center align-items-center">
+                    <div class="col-6 d-flex justify-content-start align-items-center">
+                        <span>Customer Name</span>
+                    </div>
+                    <div class="col-6">
+                        {{lcoPaymentList?.customer_name}}
+                    </div>
+                </div>
+            </div>
+            <div class="line">
+                <div class=" col-12 d-flex justify-content-center align-items-center">
+                    <div class="col-6 d-flex justify-content-start align-items-center">
+                        <span>Smartcard</span>
+                    </div>
+                    <div class="col-6">
+                        {{lcoPaymentList?.smartcard}}
+                    </div>
+                </div>
+            </div>
+            <div class="line">
+                <div class="col-12 d-flex justify-content-center align-items-center">
+                    <div class="col-6 d-flex justify-content-start align-items-center">
+                        <span>Balance Amount</span>
+                    </div>
+                    <div class="col-6">
+                        <div class="gender-category">
+                            {{lcoPaymentList?.new_balance}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="line">
+                <div class="col-12 d-flex justify-content-center align-items-center">
+                    <div class="col-6 d-flex justify-content-start align-items-center">
+                        <span>Paid Amount</span>
+                    </div>
+                    <div class="col-6">
+                        <div class="gender-category">
+                            {{lcoPaymentList?.paid_amount}}
                         </div>
                     </div>
                 </div>
