--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -376,7 +376,7 @@
                 <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_dashboard(5)">
                     <div class="d-flex justify-content-between w-100">
                         <i class='bx bx-dollar-circle'></i>
-                        <span class="fw-bold">{{operatorDetailsCount?.yesterdayrechargecount}}</span>
+                        <span class="fw-bold">{{operatorDetailsCount?.yesterdayrechargeamount}}</span>
                     </div>
                     <div class="mt-2 mb-2 text-center text">Yesterday Recharge</div>
                 </div>
@@ -386,7 +386,7 @@
                     <div class="d-flex justify-content-between w-100">
                         <i class='bx bx-credit-card'></i>
                         <span class="fw-bold">
-                            {{ operatorDetailsCount?.todayrechargecount }}
+                            {{ operatorDetailsCount?.todayrechargeamount }}
                         </span>
                     </div>
                     <div class="mt-2 mb-2 text-center text">Today Recharge</div>
@@ -397,7 +397,7 @@
                 <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_dashboard(9)">
                     <div class="d-flex justify-content-between w-100">
                         <i class='bx bx-map'></i>
-                        <span class="fw-bold">{{operatorDetailsCount?.areachange}}</span>
+                        <span class="fw-bold">{{operatorDetailsCount?.areacount}}</span>
                     </div>
                     <div class="mt-2 mb-2 text-center text">Area Wise Subscriber</div>
                 </div>
