--- a/src/app/admin/features/operator_Login/Dialog/lco-smartcard-dialog/lco-smartcard-dialog.component.html
+++ b/src/app/admin/features/operator_Login/Dialog/lco-smartcard-dialog/lco-smartcard-dialog.component.html
@@ -44,7 +44,8 @@
                         <span>Collected Amount</span>
                     </div>
                     <div class="col-6">
-                        <input type="text" [(ngModel)]="pay" (keypress)="onKeydown($event)"  placeholder="Enter payment ₹">
+                        <input type="text" [(ngModel)]="pay" (keypress)="onKeydown($event)"
+                            placeholder="Enter payment ₹">
                     </div>
                 </div>
             </div>
@@ -115,7 +116,8 @@
                         <span>Collected Amount</span>
                     </div>
                     <div class="col-6">
-                        <input type="text" [(ngModel)]="pay" (keypress)="onKeydown($event)"  placeholder="Enter payment ₹">
+                        <input type="text" [(ngModel)]="pay" (keypress)="onKeydown($event)"
+                            placeholder="Enter payment ₹">
                     </div>
                 </div>
             </div>
@@ -130,72 +132,67 @@
 </div>
 <div *ngIf="type == 'smartcardDetails'">
     <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
-        <h6>PAYMENT EDIT</h6>
+        <h6>CASH COLLECTION REPORT</h6>
         <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
     </div>
-    <div class="container">
-        <div class="card d-block justify-content-center align-items-center"
-            style="border: 1px solid green;padding: 1rem;">
-            <div class="line">
-                <div class=" col-12 d-flex justify-content-center align-items-center">
-                    <div class="col-6 d-flex justify-content-start align-items-center">
-                        <span>Customer Name</span>
-                    </div>
-                    <div class="col-6">
-                        {{lcoPaymentList?.customer_name}}
-                    </div>
-                </div>
-            </div>
-            <div class="line">
-                <div class=" col-12 d-flex justify-content-center align-items-center">
-                    <div class="col-6 d-flex justify-content-start align-items-center">
-                        <span>Smartcard</span>
-                    </div>
-                    <div class="col-6">
-                        {{lcoPaymentList?.smartcard}}
-                    </div>
-                </div>
-            </div>
-            <div class="line">
-                <div class="col-12 d-flex justify-content-center align-items-center">
-                    <div class="col-6 d-flex justify-content-start align-items-center">
-                        <span>Balance Amount</span>
-                    </div>
-                    <div class="col-6">
-                        <div class="gender-category">
-                            {{lcoPaymentList?.new_balance}}
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="line">
-                <div class="col-12 d-flex justify-content-center align-items-center">
-                    <div class="col-6 d-flex justify-content-start align-items-center">
-                        <span>Paid Amount</span>
-                    </div>
-                    <div class="col-6">
-                        <div class="gender-category">
-                            {{lcoPaymentList?.paid_amount}}
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="line">
-                <div class="col-12 d-flex justify-content-center align-items-center">
-                    <div class="col-6 d-flex justify-content-start align-items-center">
-                        <span>Collected Amount</span>
-                    </div>
-                    <div class="col-6">
-                        <input type="text" [(ngModel)]="pay" (keypress)="onKeydown($event)"  placeholder="Enter payment ₹">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex justify-content-center align-items-center mx-1" style="padding: 10px;">
-            <button type="button" class="btn btn-success" (click)="submit()">Submit
-            </button>
-            &nbsp;
-            <button type="button" class="btn btn-danger" (click)="onNoClick()">No</button>
-        </div>
+    <div>
+        <h5>{{lcoName}}</h5>
+        <h5 style="color: black;">{{smartcard}}</h5>
     </div>
+
+    <div style="padding: 5%;">
+        <div class="display justify-content-between align-items-center">
+            <div class="display justify-content-between align-items-center">
+                <!-- <mat-form-field appearance="outline" style="width: 100%;">
+                    <mat-date-range-input [rangePicker]="picker">
+                        <input matStartDate matInput placeholder="Start date" (dateChange)="getFromDate($event)" />
+                        <input matEndDate matInput placeholder="End date" (dateChange)="getToDate($event)" />
+                    </mat-date-range-input>
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-date-range-picker #picker></mat-date-range-picker>
+                </mat-form-field> -->
+                <mat-form-field appearance="outline">
+                    <mat-date-range-input [rangePicker]="picker">
+                        <input matStartDate matInput placeholder="Start date" (dateChange)="getFromDate($event)">
+                        <input matEndDate matInput placeholder="End date" (dateChange)="getToDate($event)">
+                    </mat-date-range-input>
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-date-range-picker #picker></mat-date-range-picker>
+                </mat-form-field>
+                <button class="btn1 d-flex align-item-center justify-content-between  bttn mx-2 mb-3"
+                    (click)="getreport()" style="background-color: var(--primary-color);">
+                    <span style="color: white;">Get</span>
+                </button>
+                <div class="display2 justify-content-end align-items-center mb-3">
+                    <div class="export-icon mx-2">
+                        <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px"
+                            (click)="getBillCollectionReport(2)">
+                        <div class="tooltip">Excel</div>
+                    </div>
+                    <div class="export-icon">
+                        <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px"
+                            (click)="getBillCollectionReport(1)">
+                        <div class="tooltip">Pdf</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="display justify-content-between align-items-center ">
+            <div class="d-flex  justify-content-between align-items-center count gap-5 ">
+                <span>TOTAL :-</span>
+                <span>COLLECTED AMOUNT : <span style="color: green;">₹ {{total_paid}} </span></span>
+                <span>UNPAID AMOUNT : <span style="color: green;">₹ {{total_unpaid}} </span> </span>
+                <span>EXCESS AMOUNT: <span style="color: green;">₹ {{total_excess}} </span></span>
+            </div>
+
+        </div>
+        <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='normal'
+            style="max-height: 450px;overflow: scroll;overflow-x: hidden;overflow-y: hidden;"
+            class="ag-theme-alpine table-class" rowAnimation [columnDefs]="columnnDefs" [rowData]="rowData"
+            (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
+        </ag-grid-angular>
+    </div>
+
 </div>
