--- a/src/app/admin/features/special_role/Dialogue/sublcooperator/sublcooperator.component.html
+++ b/src/app/admin/features/special_role/Dialogue/sublcooperator/sublcooperator.component.html
@@ -82,47 +82,42 @@
                         <div class="col-2 vertical tooltip-container">
                             <div class="col-2 vertical tooltip-container">
                                 <i class="fas fa-edit" style="color: #01698c;"
-                                    (click)="this.openaddedlogue('updatesublco', operator.operatorid);"></i>
+                                    (click)="this.opendialogue('updatesublco', operator);"></i>
                                 <span class="tooltip">Edit SUBLCO</span>
                             </div>
                         </div>
                         <div class="col-2 vertical tooltip-container">
                             <div class="col-2 vertical tooltip-container">
                                 <i class="fa fa-map-marker" aria-hidden="true" style="color: #f701d5;"
-                                    (click)="this.openaddedlogue('areaupdation', operator.operatorid);"></i>
+                                    (click)="this.openaddedlogue('areaupdation', operator);"></i>
                                 <span class="tooltip">Area Updation</span>
                             </div>
                         </div>
-                        <div class="col-2 vertical tooltip-container"
-                            (click)="openDialog('active_smartcard_connection',operator.operatorid)">
+                        <div class="col-2 vertical tooltip-container">
                             <div class="col-2 vertical tooltip-container">
-
-                                <i class="fas fa-file-alt" style="color: red;"></i>
-
+                                <i class="fas fa-file-alt" style="color: red;"
+                                    (click)="this.opendialogue('reportdation', operator);"></i>
                                 <span class="tooltip">Report</span>
                             </div>
                         </div>
-                        <div class="col-2 vertical tooltip-container"
-                            (click)="openDialog('active_smartcard_connection',operator.operatorid)">
+                        <div class="col-2 vertical tooltip-container">
                             <div class="col-2 vertical tooltip-container">
-
-
-                                <i class="fa fa-lock" aria-hidden="true" style="color: #124101c9;"></i>
-
+                                <i class="fa fa-lock" aria-hidden="true" style="color: #124101c9;"
+                                    (click)="this.openaddedlogue('permission', operator);"></i>
                                 <span class="tooltip">Permission</span>
                             </div>
                         </div>
-                        <div class="col-2 vertical tooltip-container"
-                            (click)="openDialog('active_smartcard_connection',operator.operatorid)">
+                        <div class="col-2 vertical tooltip-container">
                             <div class="col-2 vertical tooltip-container">
-                                <i class="fa fa-cog" aria-hidden="true" style="color: brown;"></i>
+                                <i class="fa fa-cog" aria-hidden="true" style="color: brown;"
+                                    (click)="this.opendialogue('wallet_recharge', operator);"></i>
                                 <span class="tooltip">SUBLCO Rating</span>
                             </div>
                         </div>
-                        <div class="col-2 vertical tooltip-container"
-                            (click)="openDialog('active_smartcard_connection',operator.operatorid)">
+                        <div class="col-2 vertical tooltip-container">
                             <div class="col-2 vertical tooltip-container">
-                                <i class="fa fa-dollar" style="color: blue;"></i>
+                                <i class="fa fa-dollar" style="color: blue;"
+                                    (click)="this.opendialogue('sub_lco_discount', operator);"></i>
                                 <span class="tooltip">SUBLCO Discount</span>
                             </div>
                         </div>
@@ -130,7 +125,7 @@
                     <br>
                     <div class="child-card col-12">
                         <div class="col-2 vertical tooltip-container"
-                            (click)="openDialog('box_in_hand',operator.operatorid)">
+                            (click)="openDialog('box_in_hand',operator)">
                             <div class="col-2 vertical tooltip-container">
                                 <p class="sub-text">Box In Hand</p>
                                 <span style="color: #0e610b;">
@@ -141,34 +136,34 @@
                             </div>
                         </div>
                         <div class="col-2 vertical tooltip-container"
-                            (click)="openDialog('active_smartcard_connection',operator.operatorid)">
+                            (click)="openLCO_dashboard(2)">
                             <div class="col-2 vertical tooltip-container">
                                 <p class="sub-text">Active</p>
                                 <span style="color: #0e610b;">
                                     <div class="circle" style="background-color: rgb(122, 64, 129);"><span
-                                            class="circle-text">{{operator?.activecount}}</span></div>
+                                            class="circle-text">{{activeCount}}</span></div>
                                 </span>
                                 <span class="tooltip">Active</span>
                             </div>
                         </div>
                         <div class="col-2 vertical tooltip-container"
-                            (click)="openDialog('expired_smartcard_connection',operator.operatorid)">
+                            (click)="openLCO_dashboard(3)">
                             <div class="col-2 vertical tooltip-container">
                                 <p class="sub-text">Expired</p>
                                 <span style="color: #0e610b;">
                                     <div class="circle" style="background-color: rgb(202, 9, 9);"><span
-                                            class="circle-text">{{operator?.expiredcount}}</span></div>
+                                            class="circle-text">{{expiryCount}}</span></div>
                                 </span>
                                 <span class="tooltip">Expired</span>
                             </div>
                         </div>
                         <div class="col-2 vertical tooltip-container"
-                            (click)="openDialog('new_smartcard_connection',operator.operatorid)">
+                            (click)="openLCO_dashboard(10)">
                             <div class="col-2 vertical tooltip-container">
                                 <p class="sub-text">New</p>
                                 <span style="color: #0e610b;">
                                     <div class="circle" style="background-color: rgb(13 131 33);"><span
-                                            class="circle-text">{{operator?.newcount}}</span></div>
+                                            class="circle-text">{{newCount}}</span></div>
                                 </span> <span class="tooltip">New</span>
                             </div>
                         </div>
