--- a/src/app/admin/features/special_role/Dialogue/sublcooperatordialogue/sublcooperatordialogue.component.html
+++ b/src/app/admin/features/special_role/Dialogue/sublcooperatordialogue/sublcooperatordialogue.component.html
@@ -102,7 +102,7 @@
         <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
     </div>
     <div style="padding: 1rem;">
-        <form [formGroup]="editform" >
+        <form [formGroup]="editform">
             <div class="col justify-content-center align-items-center mb-3 mobile1">
                 <div class="col-md-12 col-sm-12 col-sm-6 ">
                     <div class="row ">
@@ -276,8 +276,9 @@
 
             <div class="col-12 col-md-12 align-items-center justify-content-center responsive-container mb-3"
                 style="margin: auto;">
-                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='autoHeight'
-                    class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
+                <ag-grid-angular #agGrid id="myGrid"
+                    style="text-align: center;max-height: 450px;overflow: scroll;overflow-y: hidden;overflow-x: hidden;"
+                    domLayout='normal' class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
                     (gridReady)="onGridReady($event)" [columnDefs]="columnDefs" [rowData]="rowData"
                     [enableCellTextSelection]="true">
                 </ag-grid-angular>
@@ -334,11 +335,12 @@
         <div class="d-flex justify-content-center align-items-center" style="padding: 10px;">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="status" id="active" (change)="getcustomermode()"
-                [checked]="isCustomerMode">
+                    [checked]="isCustomerMode">
                 <label class="form-check-label" for="active">Customer Rate</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="status" id="deactive" (change)="getMsomode()"  [checked]="isCustomerMode">
+                <input class="form-check-input" type="radio" name="status" id="deactive" (change)="getMsomode()"
+                    [checked]="isCustomerMode">
                 <label class="form-check-label" for="deactive">MSO Rate</label>
             </div>
         </div>
